# magix

./: .gitignore  Readme.md  Readme.org  flake.nix  magix.cabal
app/: Main.hs  Option.hs  Options.hs
scripts/: check  mtest
src/: Directive.hs  Magix.hs
src/Magix/: Build.hs  Builder.hs  Config.hs  Constants.hs  Directives.hs  Expression.hs  Hash.hs  Magix.hs  NixpkgsPath.hs  Options.hs  Paths.hs  Run.hs
src/Magix/Bash/: Directives.hs  Expression.hs  Template.nix
src/Magix/Directives/: Common.hs
src/Magix/Haskell/: Builder.hs  Directives.hs  Expression.hs  Template.nix
src/Magix/Languages/Bash/: Directives.hs  Expression.hs  Template.nix
src/Magix/Languages/Haskell/: Directives.hs  Expression.hs  Template.nix
src/Magix/Languages/Python/: Directives.hs  Expression.hs  Template.nix
test/: DirectiveSpec.hs
test-scripts/: args-bash  args-haskell  minimal  minimal bash  minimal haskell  minimal-bash  minimal-haskell  multiple
test-scripts/bash/: empty  minimal
test-scripts/haskell/: args  empty
test-scripts/python/: args  empty  minimal
test/Magix/: BuildSpec.hs  BuilderSpec.hs  DirectiveSpec.hs  DirectivesSpec.hs  ExpressionSpec.hs  NixpkgsPathSpec.hs  Tools.hs
test/Magix/Directives/: CommonSpec.hs
test/Magix/Haskell/: BuilderSpec.hs  DirectivesSpec.hs  ExpressionSpec.hs
test/Magix/Languages/: TestHelpers.hs
test/Magix/Languages/Bash/: DirectivesSpec.hs  ExpressionSpec.hs
test/Magix/Languages/Haskell/: DirectivesSpec.hs  ExpressionSpec.hs
test/Magix/Languages/Python/: DirectivesSpec.hs  ExpressionSpec.hs
test/scripts/: minimal  sample
