cabal-version:      3.4
name:               magix
version:            0.1.0.0
synopsis:
  Build, cache, and run compiled scripts using the Nix package manager

description:
  Please see the README at <https://github.com/dschrempf/magix#readme>

category:           Math, Statistics
homepage:           https://github.com/dschrempf/magix#readme
bug-reports:        https://github.com/dschrempf/magix/issues
author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com
copyright:          2024 Dominik Schrempf
license:            GPL-3.0-or-later
license-file:       License.txt
build-type:         Simple
extra-doc-files:
  Changelog.md
  Readme.md

extra-source-files:
data-files:         src/Magix/**/Template.nix

source-repository head
  location: https://github.com/dschrempf/magix
  type:     git

common common
  default-extensions: OverloadedStrings

common lib
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common test
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common bench
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common exec
  default-language: GHC2021
  ghc-options:
    -Wall -Wunused-packages -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

library
  import:          common, lib
  exposed-modules:
    Magix
    Magix.Build
    Magix.Config
    Magix.Directives
    Magix.Directives.Common
    Magix.Expression
    Magix.Haskell.Directives
    Magix.Haskell.Expression
    Magix.Options
    Magix.Run

  hs-source-dirs:  src
  other-modules:   Paths_magix
  autogen-modules: Paths_magix
  ghc-options:
  build-depends:
    , base                  >=4.7 && <5
    , directory
    , filepath
    , hashable
    , megaparsec
    , optparse-applicative
    , process
    , text
    , xdg-basedir

executable magix
  import:          common, exec
  main-is:         Main.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , base      >=4.7 && <5
    , hslogger
    , magix
    , text

test-suite test-magix
  import:          common, test
  main-is:         Spec.hs
  hs-source-dirs:  test
  other-modules:
    Magix.Directives.CommonSpec
    Magix.DirectivesSpec
    Magix.Haskell.DirectivesSpec
    Magix.Haskell.ExpressionSpec

  autogen-modules:
  ghc-options:
  type:            exitcode-stdio-1.0
  build-depends:
    , base        >=4.7 && <5
    , hspec
    , magix
    , megaparsec
    , text
