cabal-version:      3.4
name:               magix
version:            0.2.0.0
synopsis:
  Build, cache, and run compiled scripts using the Nix package manager

description:
  Please see the README at <https://github.com/dschrempf/magix#readme>

category:           Math, Statistics
homepage:           https://github.com/dschrempf/magix#readme
bug-reports:        https://github.com/dschrempf/magix/issues
author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com
copyright:          2024 Dominik Schrempf
license:            GPL-3.0-or-later
license-file:       License.txt
build-type:         Simple
extra-doc-files:
  Changelog.md
  Readme.md

extra-source-files:
data-files:
  src/Magix/Languages/Bash/Template.nix
  src/Magix/Languages/Haskell/Template.nix
  src/Magix/Languages/Python/Template.nix

source-repository head
  location: https://github.com/dschrempf/magix
  type:     git

common common
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings

common lib
  default-language: GHC2021
  ghc-options:      -Werror -Wunused-packages -Wredundant-constraints

common test
  default-language: GHC2021
  ghc-options:      -Werror -Wunused-packages -Wredundant-constraints

common bench
  default-language: GHC2021
  ghc-options:      -Werror -Wunused-packages -Wredundant-constraints

common exec
  default-language: GHC2021
  ghc-options:
    -Werror -Wunused-packages -Wredundant-constraints -threaded
    -rtsopts -with-rtsopts=-N

library
  import:          common, lib
  exposed-modules:
    Magix
    Magix.Build
    Magix.Config
    Magix.Directives
    Magix.Directives.Common
    Magix.Expression
    Magix.Hash
    Magix.Languages.Bash.Directives
    Magix.Languages.Bash.Expression
    Magix.Languages.Haskell.Directives
    Magix.Languages.Haskell.Expression
    Magix.Languages.Python.Directives
    Magix.Languages.Python.Expression
    Magix.NixpkgsPath
    Magix.Options
    Magix.Paths
    Magix.Run

  hs-source-dirs:  src
  other-modules:   Paths_magix
  autogen-modules: Paths_magix
  ghc-options:
  build-depends:
    , base                  >=4.7 && <5
    , bytestring
    , cryptohash-sha256
    , directory
    , filelock
    , filepath
    , megaparsec
    , optparse-applicative
    , process
    , text
    , unix
    , xdg-basedir

executable magix
  import:          common, exec
  main-is:         Main.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , base      >=4.7 && <5
    , hslogger
    , magix
    , text

test-suite test-magix
  import:          common, test
  main-is:         Spec.hs
  hs-source-dirs:  test
  other-modules:
    Magix.BuildSpec
    Magix.Directives.CommonSpec
    Magix.DirectivesSpec
    Magix.Languages.Bash.DirectivesSpec
    Magix.Languages.Bash.ExpressionSpec
    Magix.Languages.Haskell.DirectivesSpec
    Magix.Languages.Haskell.ExpressionSpec
    Magix.Languages.Python.DirectivesSpec
    Magix.Languages.Python.ExpressionSpec
    Magix.NixpkgsPathSpec
    Magix.Tools

  autogen-modules:
  ghc-options:
  type:            exitcode-stdio-1.0
  build-depends:
    , base        >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , hspec
    , magix
    , megaparsec
    , random
    , text
    , unix
